# RAG-ResearchPaper

./: .env.example  .gitignore  README.md  requirements.txt
backend/: config.yaml  pyproject.toml  run.sh
backend/app/: dependencies.py  main.py  models.py
backend/app/core/: config.py
backend/app/services/embeddings/: client.py
backend/app/services/indexing/: chunk_normalizer.py  cleanup.py  ingest.py  rag_chunker.py  registry.py  status.py
backend/app/services/llm/: groq_generator.py
backend/app/services/pdf/: parser.py
backend/app/services/retrieval/: retrieval_pipeline.py  rrf_score.py  sparse.py
backend/app/services/storage/: config.py  qdrant_client.py  vector_db.py
backend/tests/: test_api.py  test_config.py  test_document_merge.py  test_embedding.py  test_ingest.py  test_parser.py  test_query_endpoint.py  test_retrieval.py  test_status.py  test_vector_db.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AdvancedSettings.tsx  ChatMessage.tsx  CitationList.tsx  DismissLayer.tsx  DocumentList.tsx  MarkdownContent.tsx
