[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperassistant-backend"
version = "0.1.0"
description = "Paper Assistant backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "PyMuPDF>=1.24",
  "pymupdf4llm>=1.27.2.3",
  "reportlab>=4.2",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.13",
  "pyyaml>=6.0",
  "huggingface_hub>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
